work3/top10games/top10games-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: top10games
spec:
  selector:
    matchLabels:
      app: top10games
  template:
    metadata:
      labels:
        app: top10games
    spec:
      containers:
      - name: top10games-container
        image: partha00011/top10games
        #        resources:
        #          limits:
        #            memory: "128Mi"
        #            cpu: "200m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: top10games-svc
spec:
  selector:
    app: top10games
  ports:
  - port: 80
    targetPort: 80
